packages/fuel-indexer-tests/tests/snapshots/integration_tests__commands__forc_index_auth_help_output.snap
---
source: packages/fuel-indexer-tests/tests/commands.rs
expression: output
---
Authenticate against an indexer service

USAGE:
    forc-index auth [OPTIONS]

OPTIONS:
        --account <ACCOUNT>    Index of account to use for signing. [default: 0]
    -h, --help                 Print help information
        --url <URL>            URL at which to deploy indexer assets. [default:
                               http://127.0.0.1:29987]
    -v, --verbose              Verbose output.
