packages/fuel-indexer-tests/tests/snapshots/integration_tests__commands__forc_index_build_help_output.snap
---
source: packages/fuel-indexer-tests/tests/commands.rs
expression: output
---
Build an indexer

USAGE:
    forc-index build [OPTIONS]

OPTIONS:
    -d, --debug
            Build artifacts with the debug profile.

    -h, --help
            Print help information

        --locked
            Ensure that the Cargo.lock file is up-to-date.

    -m, --manifest <MANIFEST>
            Manifest file name of indexer being built.

        --override-end-block <OVERRIDE_END_BLOCK>
            Override the end blockt.

        --override-identifier <OVERRIDE_IDENTIFIER>
            Override the identifier.

        --override-start-block <OVERRIDE_START_BLOCK>
            Override the start block.

    -p, --path <PATH>
            Path to the indexer project.

    -v, --verbose
            Enable verbose output.
