packages/fuel-indexer-tests/tests/snapshots/integration_tests__commands__forc_index_kill_help_output.snap
---
source: packages/fuel-indexer-tests/tests/commands.rs
expression: output
---
Kill the indexer process. Note that this command will kill any process listening on the default
indexer port or the port specified by the `--port` flag

USAGE:
    forc-index kill [OPTIONS]

OPTIONS:
    -9                   Terminate or kill
    -h, --help           Print help information
        --port <PORT>    Port at which to detect indexer service API is running. [default: 29987]
