packages/fuel-indexer-tests/tests/snapshots/integration_tests__commands__forc_index_new_help_output.snap
---
source: packages/fuel-indexer-tests/tests/commands.rs
expression: output
---
Create a new indexer project in a new directory

USAGE:
    forc-index new [OPTIONS] <PATH>

ARGS:
    <PATH>    Path at which to create indexer

OPTIONS:
        --absolute-paths           Resolve indexer asset filepaths using absolute paths.
    -h, --help                     Print help information
        --json-abi <JSON_ABI>      Path to JSON ABI for automatic schema generation.
        --name <NAME>              Name of indexer.
        --namespace <NAMESPACE>    Namespace to which indexer belongs.
        --native                   Initialize an indexer with native execution enabled.
    -v, --verbose                  Enable verbose output.
