packages/fuel-indexer-tests/tests/snapshots/integration_tests__commands__forc_index_status_help_output.snap
---
source: packages/fuel-indexer-tests/tests/commands.rs
expression: output
---
Check the status of a registered indexer

USAGE:
    forc-index status [OPTIONS]

OPTIONS:
        --auth <AUTH>    Authentication header value.
    -h, --help           Print help information
        --url <URL>      URL at which to find indexer service. [default: http://127.0.0.1:29987]
    -v, --verbose        Enable verbose logging.
