packages/fuel-indexer-tests/tests/snapshots/integration_tests__commands__fuel_indexer_api_server_help_output.snap
---
source: packages/fuel-indexer-tests/tests/commands.rs
expression: output
---
Fuel Indexer API server

USAGE:
    fuel-indexer-api-server <SUBCOMMAND>

OPTIONS:
    -h, --help       Print help information
    -V, --version    Print version information

SUBCOMMANDS:
    help    Print this message or the help of the given subcommand(s)
    run     Fuel indexer web server
